force-app/main/default/objects/MY_UnifiedAPI_Landing__c/MY_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>MY UnifiedAPI Landing</label>
    <nameField>
        <label>MY UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>