force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/addr_streetline2__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline2__c</fullName>
    <label>Address Streetline2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>