force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/affiliate_value_preferredlanguage__c.field-meta.xml
<CustomField>
    <fullName>affiliate_value_preferredlanguage__c</fullName>
    <label>Affiliate Value PreferredLanguage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>