force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/br_brand_reason_for_switching__c.field-meta.xml
<CustomField>
    <fullName>br_brand_reason_for_switching__c</fullName>
    <label>BR Brand Reason For Switching</label>
    <length>255</length>
    <type>Text</type>
</CustomField>