force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/br_brand_switch_reason__c.field-meta.xml
<CustomField>
    <fullName>br_brand_switch_reason__c</fullName>
    <label>BR Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>