force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/br_end_user__c.field-meta.xml
<CustomField>
    <fullName>br_end_user__c</fullName>
    <label>BR End User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>