force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/br_leadstatus__c.field-meta.xml
<CustomField>
    <fullName>br_leadstatus__c</fullName>
    <label>BR Lead Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>