force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/br_primary_contact__c.field-meta.xml
<CustomField>
    <fullName>br_primary_contact__c</fullName>
    <label>BR Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>