force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_child_dob__c.field-meta.xml
<CustomField>
    <fullName>contact_child_dob__c</fullName>
    <label>Contact Child DOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>