force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_child_gender__c.field-meta.xml
<CustomField>
    <fullName>contact_child_gender__c</fullName>
    <label>Contact Child Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>