force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_child_height_result__c.field-meta.xml
<CustomField>
    <fullName>contact_child_height_result__c</fullName>
    <label>Contact Child Height Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>