force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_do_not_call__c.field-meta.xml
<CustomField>
    <fullName>contact_do_not_call__c</fullName>
    <label>Contact Do Not Call</label>
    <length>50</length>
    <type>Text</type>
</CustomField>