force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_ethnicity__c.field-meta.xml
<CustomField>
    <fullName>contact_ethnicity__c</fullName>
    <label>Contact Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>