force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_homephone__c.field-meta.xml
<CustomField>
    <fullName>contact_homephone__c</fullName>
    <label>Contact Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>