force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_preferredtime__c.field-meta.xml
<CustomField>
    <fullName>contact_preferredtime__c</fullName>
    <label>Contact Preferred Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>