force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/contact_sms_opt_out_date__c.field-meta.xml
<CustomField>
    <fullName>contact_sms_opt_out_date__c</fullName>
    <label>Contact SMS Opt Out Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>