force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_brandrelationship__c.field-meta.xml
<CustomField>
    <fullName>cr_brandrelationship__c</fullName>
    <label>CR brandrelationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>