force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_contact_mobile__c.field-meta.xml
<CustomField>
    <fullName>cr_contact_mobile__c</fullName>
    <label>CR Contact Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>