force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_is_sample_requested__c.field-meta.xml
<CustomField>
    <fullName>cr_is_sample_requested__c</fullName>
    <label>CR Is Sample Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>