force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_outlet_type__c.field-meta.xml
<CustomField>
    <fullName>cr_outlet_type__c</fullName>
    <label>CR Outlet Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>