force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_registrationdate__c.field-meta.xml
<CustomField>
    <fullName>cr_registrationdate__c</fullName>
    <label>CR Registration Date</label>
    <type>Date</type>
</CustomField>