force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_sampleproductid__c.field-meta.xml
<CustomField>
    <fullName>cr_sampleproductid__c</fullName>
    <label>CR Sample Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>