force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_samplerequested__c.field-meta.xml
<CustomField>
    <fullName>cr_samplerequested__c</fullName>
    <label>CR Sample Requested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>