force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/cr_utmcampaign__c.field-meta.xml
<CustomField>
    <fullName>cr_utmcampaign__c</fullName>
    <label>CR UTM Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>