force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/error_field__c.field-meta.xml
<CustomField>
    <fullName>error_field__c</fullName>
    <label>Error Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>