force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/Has_Opted_Out_Of_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Opted_Out_Of_Email__c</fullName>
    <label>Has Opted Out Of Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>