force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/household_contact_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>household_contact_mobile_phone__c</fullName>
    <label>Household contact mobile phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>