force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/household_firstname__c.field-meta.xml
<CustomField>
    <fullName>household_firstname__c</fullName>
    <label>Household Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>