force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/household_market__c.field-meta.xml
<CustomField>
    <fullName>household_market__c</fullName>
    <label>Household Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>