force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/nh_child_fussy_eater__c.field-meta.xml
<CustomField>
    <fullName>nh_child_fussy_eater__c</fullName>
    <label>NH Child Fussy Eater</label>
    <length>255</length>
    <type>Text</type>
</CustomField>