force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/nh_health_condition__c.field-meta.xml
<CustomField>
    <fullName>nh_health_condition__c</fullName>
    <label>NH Health Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>