force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/nh_height_percentile__c.field-meta.xml
<CustomField>
    <fullName>nh_height_percentile__c</fullName>
    <label>NH Height Percentile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>