force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/nh_photo_url__c.field-meta.xml
<CustomField>
    <fullName>nh_photo_url__c</fullName>
    <label>NH Photo URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>