force-app/main/default/objects/MY_UnifiedAPI_Landing__c/fields/object_extraction_status__c.field-meta.xml
<CustomField>
    <fullName>object_extraction_status__c</fullName>
    <label>Object Extraction Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>